--- a/templates/default.html
+++ b/templates/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Bootstrap Example">
+    <meta name="description" content="Teacher Virus is an Open Source platform for the distribution and curation of Free Education - Infectious Education!">
     <meta name="author" content="Harry Longworth">
     <link rel="icon" href="{{ page.root_path }}/public/favicon.ico">
     <title>{{ page.name }}</title>
