--- a/templates/default.html
+++ b/templates/default.html
@@ -11,9 +11,9 @@
     <title>{{ page.name }}</title>
     <link rel="alternate" type="application/atom+xml" href="{{ page.root_path }}/?/feed/">
           <!-- Bootstrap -->
-    <link href="{{ page.root_path }}/public/docs/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ page.root_path }}/public/docs/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="{{ page.root_path }}/public/docs/css/my-styles.css" rel="stylesheet">
+    <link href="/public/docs/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/docs/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/public/docs/css/my-styles.css" rel="stylesheet">
       
       <link href='http://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="logo" href="{{ page.root_path }}"><img class="logo" src="{{ page.root_path }}/public/images/logo.png" alt="Teacher Virus"><span class="navbar-brand logotext"><b> Teacher Virus</b></span></a>
+            <a class="logo" href="{{ page.root_path }}"><img class="logo" src="/public/images/logo.png" alt="Teacher Virus"><span class="navbar-brand logotext"><b> Teacher Virus</b></span></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             {% include 'partials/navigation/navigation.html' %}    
@@ -60,11 +60,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->  
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ page.root_path }}/public/docs/js/jquery-1.11.1.min.js"></script>
+    <script src="/public/docs/js/jquery-1.11.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ page.root_path }}/public/docs/js/bootstrap.min.js"></script>
+    <script src="/public/docs/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ page.root_path }}/public/docs/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/public/docs/js/ie10-viewport-bug-workaround.js"></script>
     
   </body>
 </html>
